--- a/ext/crafter-integration-ext/build.xml
+++ b/ext/crafter-integration-ext/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE project>
 
-<project name="crafter-integration-ext-ext" basedir="." default="deploy">
+<project name="crafter-integration-ext" basedir="." default="deploy">
 	<import file="../build-common-ext.xml" />
 </project>
