--- a/portlets/crafter-integration-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/portlets/crafter-integration-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -5,7 +5,17 @@ tags=
 short-description=
 long-description=
 change-log=
-page-url=http://www.liferay.com
-author=Liferay, Inc.
-licenses=LGPL
+page-url=http://www.rivetlogic.com
+author=Rivet Logic Corporation
+licenses=GPLv3
 liferay-versions=6.2.0+
+portal-dependency-jars=\
+commons-lang.jar,\
+spring-beans.jar,\
+spring-context-support.jar,\
+spring-context.jar,\
+spring-core.jar,\
+spring-web-portlet.jar,\
+spring-web-servlet.jar,\
+spring-web-struts.jar,\
+spring-web.jar
